--- a/src/dune
+++ b/src/dune
@@ -1,4 +1,4 @@
 (library
   (name mirage_fs_mem)
   (public_name mirage-fs-mem)
-  (libraries mirage-fs-lwt rresult fpath fmt))
+  (libraries mirage-kv-lwt rresult fpath fmt))
