rename to mirage-kv-mem

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,10 @@ script: bash -ex .travis-opam.sh
 sudo: required
 env:
   global:
-    - PACKAGE="mirage-fs-mem"
+    - PACKAGE="mirage-kv-mem"
   matrix:
     - OCAML_VERSION=4.05
     - OCAML_VERSION=4.06
+    - OCAML_VERSION=4.07
 notifications:
   email: false
