--- a/mirage-kv-mem.opam
+++ b/mirage-kv-mem.opam
@@ -1,15 +1,16 @@
 opam-version: "2.0"
 maintainer: [
   "Stefanie Schirmer @linse"
+  "Hannes Mehnert"
 ]
 authors: [
   "Stefanie Schirmer @linse"
   "Hannes Mehnert"
 ]
-homepage: "https://github.com/roburio/mirage-fs-mem"
-doc: "https://roburio.github.io/mirage-fs-mem/"
-bug-reports: "https://github.com/roburio/mirage-fs-mem/issues"
-dev-repo: "git+https://github.com/roburio/mirage-fs-mem.git"
+homepage: "https://github.com/mirage/mirage-kv-mem"
+doc: "https://mirage.github.io/mirage-kv-mem/"
+bug-reports: "https://github.com/mirage/mirage-kv-mem/issues"
+dev-repo: "git+https://github.com/mirage/mirage-kv-mem.git"
 tags: [ "org:mirage" "org:robur" ]
 license: "ISC"
 
@@ -31,6 +32,6 @@ depends: [
 
 synopsis: "In-memory file system for for MirageOS"
 description: """
-Implements the mirage-fs interface, but does not provide a persistent data storage.
+Implements the mirage-kv interface, but does not provide a persistent data storage.
 Use for testing or amnesia.
 """
