--- a/src/dune
+++ b/src/dune
@@ -1,4 +1,4 @@
 (library
-  (name mirage_fs_mem)
-  (public_name mirage-fs-mem)
+  (name mirage_kv_mem)
+  (public_name mirage-kv-mem)
   (libraries mirage-kv-lwt rresult fmt ptime mirage-clock))
