--- a/mirage-kv-mem.opam
+++ b/mirage-kv-mem.opam
@@ -30,7 +30,7 @@ depends: [
   "fmt"
 ]
 
-synopsis: "In-memory file system for for MirageOS"
+synopsis: "In-memory key value store for MirageOS"
 description: """
 Implements the mirage-kv interface, but does not provide a persistent data storage.
 Use for testing or amnesia.
