--- a/mirage-kv-mem.opam
+++ b/mirage-kv-mem.opam
@@ -25,6 +25,7 @@ depends: [
   "dune" {build}
   "alcotest" {with-test}
   "ppx_deriving" {with-test}
+  "mirage-clock" {>= "2.0.0"}
   "mirage-kv-lwt"
   "rresult"
   "fmt"
