--- a/mirage-kv-mem.opam
+++ b/mirage-kv-mem.opam
@@ -22,7 +22,7 @@ build: [
 
 depends: [
   "ocaml" {>= "4.06.0"}
-  "dune"
+  "dune" {>= "1.3.0"}
   "alcotest" {with-test}
   "ppx_deriving" {with-test}
   "mirage-clock" {>= "3.0.0"}
