--- a/src/dune
+++ b/src/dune
@@ -1,4 +1,4 @@
 (library
   (name mirage_kv_mem)
   (public_name mirage-kv-mem)
-  (libraries mirage-kv rresult fmt ptime mirage-clock))
+  (libraries mirage-kv fmt ptime mirage-clock))
