--- a/mirage-kv-mem.opam
+++ b/mirage-kv-mem.opam
@@ -24,12 +24,12 @@ depends: [
   "ocaml" {>= "4.08.0"}
   "dune" {>= "1.3.0"}
   "alcotest" {with-test}
-  "ppx_deriving" {with-test}
   "mirage-clock" {>= "3.0.0"}
   "mirage-kv" {>= "6.0.0"}
   "fmt"
   "ptime"
   "mirage-clock-unix" {>= "3.0.0"}
+  "optint" {with-test}
 ]
 conflicts: [ "result" {< "1.5"} ]
 
