use dune variants, preserve timestamp function in type t (#6)
* defunctorise, use mirage-ptime

* provide set_last_modified, to set the last_modified to a specific date.

This takes priority, and is useful for e.g. crunch - where the timestamp of the
mirage-kv-mem creation should be recorded.

* preserve timestamp function in t

* update dependencies

--- a/mirage-kv-mem.opam
+++ b/mirage-kv-mem.opam
@@ -24,12 +24,11 @@ depends: [
   "ocaml" {>= "4.08.0"}
   "dune" {>= "1.3.0"}
   "alcotest" {with-test}
-  "mirage-clock" {>= "3.0.0"}
+  "mirage-ptime" {>= "5.0.0"}
   "mirage-kv" {>= "6.0.0"}
-  "fmt"
-  "ptime"
-  "mirage-clock-unix" {>= "3.0.0"}
-  "optint"
+  "fmt" {>= "0.9.0"}
+  "ptime" {>= "1.1.0"}
+  "optint" {>= "0.3.0"}
 ]
 conflicts: [ "result" {< "1.5"} ]
 
